--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #tomcat端口
-server.port=8080
+server.port=2222
 
 #mysql数据库配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/test1?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -13,15 +13,45 @@ mybatis.mapper-locations=classpath*:mybatis/**/*.xml
 #起别名。可省略写mybatis的xml中的resultType的全路径
 mybatis.type-aliases-package=com.example.demo.entity
 
-# thymeleaf
+# thymeleaf 做页面引擎
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
 
 #设置编码
-spring.http.encoding.charset=UTF-8
+spring.messages.encoding=UTF-8
+
+server.tomcat.uri-encoding=UTF-8
+
+spring.http.encoding.charset=utf-8
+
 spring.http.encoding.enabled=true
+
+spring.http.encoding.force=true
+
+#增加redis配置
+## Redis数据库索引（默认为0）
+#spring.redis.database=0
+## Redis服务器地址
+#spring.redis.host=127.0.0.1
+## Redis服务器连接端口
+#spring.redis.port=6379
+## Redis服务器连接密码（默认为空）
+#spring.redis.password=
+## 连接池最大连接数（使用负值表示没有限制）
+#spring.redis.pool.max-active=8
+## 连接池最大阻塞等待时间（使用负值表示没有限制）
+#spring.redis.pool.max-wait=-1
+## 连接池中的最大空闲连接
+#spring.redis.pool.max-idle=8
+## 连接池中的最小空闲连接
+#spring.redis.pool.min-idle=0
+## 连接超时时间（毫秒）
+#spring.redis.timeout=0
+
+#注册springcloud服务
+spring.application.name=user-service
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
